--- a/stackgres-k8s/e2e/spec/backupconf-removal.values.yaml
+++ b/stackgres-k8s/e2e/spec/backupconf-removal.values.yaml
@@ -1,6 +1,7 @@
 cluster:
-  instances: 1
   backup:
+    # Avoid backups before waiting for pods (since backup pods could biase the wait)
+    fullSchedule: '0 5 31 2 *'
     s3:
       prefix: s3://stackgres
       endpoint: http://backupconf-removal-minio.backupconf-removal.svc:9000
