--- a/stackgres-k8s/install/helm/stackgres-cluster/templates/nfs-storageclass.yaml
+++ b/stackgres-k8s/install/helm/stackgres-cluster/templates/nfs-storageclass.yaml
@@ -11,5 +11,5 @@ metadata:
 provisioner: {{ template "nfs-storage-class.provisionerName" . }}
 reclaimPolicy: "Delete"
 allowVolumeExpansion: true
-mountOptions: [ "vers=4.1", "noatime" ]
+mountOptions: [ "vers=4.1", "noac", "sync", "noatime", "nodiratime" ]
 {{- end -}}
