--- a/stackgres-k8s/install/helm/stackgres-cluster/values.yaml
+++ b/stackgres-k8s/install/helm/stackgres-cluster/values.yaml
@@ -120,3 +120,7 @@ minio:
     - name: stackgres
       policy: none
       purge: true
+
+#You should only set following options for non production environment
+nonProductionOptions:
+  disableClusterPodAntiAffinity: true
