--- a/stackgres-k8s/src/operator/src/main/resources/application.properties
+++ b/stackgres-k8s/src/operator/src/main/resources/application.properties
@@ -10,7 +10,7 @@ quarkus.log.category."io.stackgres".level=ALL
 quarkus.log.category."io.quarkus".level=DEBUG
 
 # Logger Development
-%dev.quarkus.log.console.format=%d{HH:mm:ss} %-5p [%c{4.}] (%t) %s%e%n
+%dev.quarkus.log.console.format=%d{yyyy-MM-dd HH:mm:ss,SSS} %-5p [%c{4.}] (%t) %s%e%n
 %dev.quarkus.log.console.level=ALL
 %dev.quarkus.log.category."io.stackgres".level=ALL
 %dev.quarkus.log.category."io.quarkus".level=DEBUG
