feat: added non production options

--- a/stackgres-k8s/install/helm/stackgres-cluster/templates/cluster-cr.yaml
+++ b/stackgres-k8s/install/helm/stackgres-cluster/templates/cluster-cr.yaml
@@ -40,7 +40,7 @@ spec:
   {{- if .Values.sidecar.prometheus.create }}
   - prometheus-postgres-exporter
   {{- end }}
-  {{- if .Values.cluster.nonProduction }}
+  {{- if .Values.nonProduction }}
   nonProduction:
   {{- if .Values.nonProduction.disableClusterPodAntiAffinity }}
     disableClusterPodAntiAffinity: {{ .Values.nonProduction.disableClusterPodAntiAffinity }}
