feat: remove pgbouncer version from cluster configuration

--- a/stackgres-k8s/install/helm/stackgres-operator/templates/poolingconfig-crd.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/templates/poolingconfig-crd.yaml
@@ -25,10 +25,7 @@ spec:
         spec:
           type: object
           properties:
-            pgbouncerVersion:
-              type: string
-              description: "pgbouncer version"
             pgbouncer.ini:
               type: object
               description: "pgbouncer.ini configuration"
-          required: ["pgbouncerVersion"]
+          required: []
