--- a/stackgres-k8s/install/helm/stackgres-cluster/values.yaml
+++ b/stackgres-k8s/install/helm/stackgres-cluster/values.yaml
@@ -83,9 +83,8 @@ crd:
 profiles:
   create: true
 
-## If defined, storageClassName: <nfsStorageClass>
-## If set to "-", storageClassName: "", which disables dynamic provisioning
-## If undefined (the default) or set to null, no storageClassName spec is
-##   set, choosing the default provisioner.  (gp2 on AWS, standard on
-##   GKE, AWS & OpenStack)
-#nfsStorageClass: "-"
+minio:
+  buckets:
+    - name: stackgres
+      policy: none
+      purge: true
