--- a/stackgres-k8s/e2e/spec/backup-with-default-storage.values.yaml
+++ b/stackgres-k8s/e2e/spec/backup-with-default-storage.values.yaml
@@ -1,5 +1,16 @@
 cluster:
+  volumeSize: 128Mi
   backup:
     # Avoid backups before waiting for pods (since backup pods could biase the wait)
     fullSchedule: '0 5 31 2 *'
     fullWindow: 1
+sidecar:
+  prometheus:
+    allowAutobind: false
+profiles:
+  - name: size-xs
+    cpu: 500m
+    memory: 256Mi
+minio:
+  persistence:
+    size: 128Mi
