--- a/stackgres-k8s/e2e/spec/prometheus-integration.values.yaml
+++ b/stackgres-k8s/e2e/spec/prometheus-integration.values.yaml
@@ -6,7 +6,7 @@ cluster:
       create: false
 sidecar:
   prometheus:
-    allowAutobind: false
+    allowAutobind: true
 profiles:
   - name: size-xs
     cpu: 500m
