feat: MinIO server as default backup store

--- a/stackgres-k8s/e2e/spec/default.values.yaml
+++ b/stackgres-k8s/e2e/spec/default.values.yaml
@@ -1,9 +1,10 @@
-cluster:
-  volumeSize: 128Mi
+config:
   backup:
     create: false
     minio:
       create: false
+cluster:
+  volumeSize: 128Mi
 sidecar:
   prometheus:
     allowAutobind: false
