--- a/stackgres-k8s/e2e/spec/backup-with-default-storage.values.yaml
+++ b/stackgres-k8s/e2e/spec/backup-with-default-storage.values.yaml
@@ -1,9 +1,10 @@
-cluster:
-  volumeSize: 128Mi
+config:
   backup:
     # Avoid backups before waiting for pods (since backup pods could biase the wait)
     fullSchedule: '0 5 31 2 *'
     fullWindow: 1
+cluster:
+  volumeSize: 128Mi
 sidecar:
   prometheus:
     allowAutobind: false
