--- a/stackgres-k8s/e2e/spec/backupconf-removal.values.yaml
+++ b/stackgres-k8s/e2e/spec/backupconf-removal.values.yaml
@@ -1,8 +1,9 @@
-cluster:
-  volumeSize: 128Mi
+config:
   backup:
     # Avoid backups before waiting for pods (since backup pods could biase the wait)
     fullSchedule: '0 5 31 2 *'
+cluster:
+  volumeSize: 128Mi
 sidecar:
   prometheus:
     allowAutobind: false
