fix: enabled persistence for minio

--- a/stackgres-k8s/install/helm/stackgres-cluster/values.yaml
+++ b/stackgres-k8s/install/helm/stackgres-cluster/values.yaml
@@ -104,6 +104,9 @@ profiles:
     memory: "32Gi"
 
 minio:
+  persistence:
+    enabled: true
+    size: 10Gi
   buckets:
     - name: stackgres
       policy: none
