feat: allow postgres and pgbouncer parametrization

--- a/stackgres-k8s/e2e/spec/backup-with-default-storage.values.yaml
+++ b/stackgres-k8s/e2e/spec/backup-with-default-storage.values.yaml
@@ -1,17 +1,25 @@
 config:
+  postgresql:
+    postgresql.conf:
+      shared_buffers: '32MB'
   backup:
     # Avoid backups before waiting for pods (since backup pods could biase the wait)
     fullSchedule: '0 5 31 2 *'
     fullWindow: 1
+    diskRateLimit: 16777216
 cluster:
   volumeSize: 128Mi
 sidecar:
   prometheus:
     allowAutobind: false
-profiles:
-  - name: size-xs
-    cpu: 500m
-    memory: 256Mi
 minio:
   persistence:
     size: 128Mi
+  affinity:
+    nodeAffinity:
+      requiredDuringSchedulingIgnoredDuringExecution:
+        nodeSelectorTerms:
+          - matchExpressions:
+            - key: "kubernetes.io/hostname"
+              operator: "In"
+              values: [ "kind-worker", "kind-jvm-image-worker", "kind-native-image-worker" ]
