--- a/stackgres-k8s/install/helm/stackgres-cluster/templates/pgconfig-cr.yaml
+++ b/stackgres-k8s/install/helm/stackgres-cluster/templates/pgconfig-cr.yaml
@@ -14,9 +14,10 @@ metadata:
   {{- end }}
 spec:
   pgVersion: "{{ index (.Values.config.postgresql.version | splitList ".") 0 }}"
+  {{- with (index .Values.config.postgresql "postgresql.conf") }}
   postgresql.conf:
-      shared_buffers: '256MB'
-      random_page_cost: '1.5'
-      password_encryption: 'scram-sha-256'
-      wal_compression: 'on'
+  {{- range $key, $value := . }}
+    {{ $key }}: '{{ $value }}'
+  {{- end }}
+  {{- end }}
 {{ end }}
